--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Wahyu Ardiansyah",
   "license": "ISC",
   "dependencies": {
+    "dateformat": "^3.0.3",
     "jquery": "^3.5.1",
     "materialize-css": "^1.0.0-rc.2"
   },
