--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dateformat": "^3.0.3",
+    "idb": "^2.1.3",
     "jquery": "^3.5.1",
     "materialize-css": "^1.0.0-rc.2"
   },
