--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dateformat": "^3.0.3",
     "idb": "^2.1.3",
     "jquery": "^3.5.1",
-    "materialize-css": "^1.0.0-rc.2"
+    "materialize-css": "^1.0.0-rc.2",
+    "serviceworker-webpack-plugin": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -28,6 +29,7 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
+    "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^4.2.2"
   }
 }
